--- a/Nivell-2.1/index.html
+++ b/Nivell-2.1/index.html
@@ -14,7 +14,7 @@
     <div class="padre">
         <header class="header">
             <div class="menu">
-                <div class="logo"><img src="img/logo.png" alt="Logo" id="logojap"></div>
+                <div class="logo"><img src="../img/logo.png" alt="Logo" id="logojap"></div>
                 <div class="nav">
                     <a href="#"><i class="fa-solid fa-house-chimney"></i>Inicio</a>
                     <a href="#"><i class="fa-solid fa-map-location-dot"></i>Rutas</a>
