Añadido media query

--- a/Nivell-2.2/index.html
+++ b/Nivell-2.2/index.html
@@ -16,11 +16,11 @@
             <div class="menu">
                 <div class="logo"><img src="../img/logo.png" alt="Logo" id="logojap"></div>
                 <div class="nav">
-                    <a href="#"><i class="fa-solid fa-house-chimney"></i>Inicio</a>
-                    <a href="#"><i class="fa-solid fa-map-location-dot"></i>Rutas</a>
-                    <a href="#"><i class="fa-solid fa-square-h"></i>Hoteles</a>
-                    <a href="#"><i class="fa-solid fa-plane"></i>Vuelos</a>
-                    <a href="#"><i class="fa-solid fa-envelope-open-text"></i>Contactos</a>
+                    <a href="#"><i class="fa-solid fa-house-chimney"></i><span class="off">Inicio</span></a>
+                    <a href="#"><i class="fa-solid fa-map-location-dot"></i><span class="off">Rutas</span></a>
+                    <a href="#"><i class="fa-solid fa-square-h"></i><span class="off">Hoteles</span></a>
+                    <a href="#"><i class="fa-solid fa-plane"></i><span class="off">Vuelos</span></a>
+                    <a href="#"><i class="fa-solid fa-envelope-open-text"></i><span class="off">Contactos</span></a>
                 </div>
                 <div class="social">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
